<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Arihant Distributors</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="phone">Call</string>
    <string name="Home">Home</string>
    <string name="Chat">Chat</string>
    <string name="Feedback">Feedback</string>
    <string name="Cart">Cart</string>
    <string name="forgot">Forgot your password?</string>
    <string name="login">Login</string>
 <string name="signup">Signup</string>
 <string name="TIN">TIN/Mobile</string>
 <string name="pswrd">password</string>
<string name = "fogot_1_text">We have sent a reset code in to your mail. Please enter it below.</string>
<string name="Reset">Reset</string>
<string name="Resend">Resend Code</string>
<string name= "OTP">OTP Code</string>
<string name= "enterpass">Type your new password in the below fields.</string>
<string name="cust">customer</string>
<string name="dist">distributor</string>
<string name="info1">Please select the type of account you want to Sign Up</string>
<string name="firmname">Firm Name</string>
<string name="Address">Address</string>
<string name="PINCode">PINCODE</string>
<string name="TIN1">TIN</string>
<string name="password">Password</string>
<string name="MobileNo">Mobile Number</string>
<string name="Email">Email</string>
<string name="CustName">Name</string>
<string name="npswrd">New Password</string>
<string name="rnpswrd">Retype New Password</string>
<string name="update">Update</string>
<string name="search">Search</string>
<string name="sort">Sort</string>
<string name="search_hint">search products</string>
<string name="filter">Filter</string>
<string name="clear">Clear</string>
<string name="listitemdesc">List item description</string>
<string name="listitemtitle">List Item Title</string>
<string name="itemTitle">Item Title 1</string>
<string name="itemPrice">INR 50</string>
<string name="cartcontent">click to add to cart</string>
<string name="addtocart">Add to cart</string>
<string name="checkout">Checkout</string>
<string name="checkoutOTP">We have sent you an One Time Password. \nPlease Enter it below to complete your order.</string>
<string name="checkoutBtn1">Confirm</string>
<string name="checkoutBtn2">Resend OTP</string>
<string name="checkoutText">Your Order has been successfully placed.\nYour order number is </string>
<string name ="submit">Submit</string>
</resources>
