<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:myapp="http://schemas.android.com/apk/res-auto" 
    tools:context="com.example.arihantdistributors.MainActivity" >


    
      <item
        android:id="@+id/home"
        android:title="@string/Home"
        android:icon="@drawable/ic_launcher"
        android:showAsAction="ifRoom|withText"
        />

           <item
        android:id="@+id/chat"
        android:title="@string/Chat"
        android:icon="@drawable/ic_launcher"
        android:showAsAction="ifRoom|withText" />
           
                  <item
        android:id="@+id/action_settings"
       android:title="@string/action_settings"
        android:icon="@drawable/ic_launcher"
        android:showAsAction="ifRoom|withText" />
                  
              <item
        android:id="@+id/feedback"
        android:title="@string/Feedback"
        android:icon="@drawable/ic_launcher"
        android:showAsAction="ifRoom|withText" />
              
                     <item
        android:id="@+id/phone"
        android:title="@string/phone"
        android:icon="@drawable/ic_launcher"
        android:showAsAction="ifRoom|withText" />
          
                       <item
        android:id="@+id/Cart"
        android:title="@string/Cart"
        android:icon="@drawable/ic_launcher"
        android:showAsAction="always" />

</menu>
