<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" 
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:animateLayoutChanges="true"
	>

	<EditText
	    android:id="@+id/editText1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="20dp"
	    android:ems="10"
	    android:gravity="center_vertical|center_horizontal"
	    android:hint="@string/CustName" >

		<requestFocus />
	</EditText>

	<EditText
	    android:id="@+id/editText2"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="20dp"
	    android:ems="10"
	    android:gravity="center_vertical|center_horizontal"
	    android:hint="@string/password"
	    android:inputType="textPassword" />

	<EditText
	    android:id="@+id/editText3"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="20dp"
	    android:ems="10"
	    android:gravity="center_vertical|center_horizontal"
	    android:hint="@string/MobileNo"
	    android:inputType="phone" />
	
	<EditText
	    android:id="@+id/editText4"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="20dp"
	    android:ems="10"
	    android:gravity="center_vertical|center_horizontal"
	    android:hint="@string/Email"
	    android:inputType="textEmailAddress" />

		<Button android:id="@+id/btnSignUpCusto" 
		    android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:layout_margin="20dp"
			android:text="@string/signup" />



</LinearLayout>
