<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="#F0F0F0"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/brandCatTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/username_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/TIN"
        android:textColor="#989898" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="textPassword"
        android:text="@string/pswrd"
        android:textColor="#989898" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/login"
                 android:background="@drawable/buttonshape"
        android:shadowColor="#B5B5B5"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
 
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/signup" 
                 android:background="@drawable/buttonshape"
        android:shadowColor="#B5B5B5"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
 
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/forgot_txt_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/forgot"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#3300ff"
        android:textStyle="italic" 
        android:onClick="forgot_password"
        android:clickable="true"  />

</LinearLayout>
