<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="fill_vertical" >

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/foodicon" />
    
     <ImageView
         android:id="@+id/addToCart"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_marginRight="15dp"
         android:layout_marginTop="40dp"
         android:clickable="true"
         android:contentDescription="@string/cartcontent"
         android:src="@drawable/ic_add_shopping_cart" />

     <TextView
         android:id="@+id/itemTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
       
         android:layout_centerHorizontal="true"
         android:text="@string/itemTitle"
         android:textAppearance="?android:attr/textAppearanceMedium" />

     <TextView
         android:id="@+id/itemPriceT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
          android:layout_alignParentTop="true"
           android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
         android:layout_alignTop="@+id/itemImage"
         android:text="@string/itemPrice"
         android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>